--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 17
       - run: yarn install --frozen-lockfile
-      - run: yarn build
+      # - run: yarn build
 
   publish-gpr:
     needs: build
