Readd publish config and set it to be published within the company registry

--- a/package.json
+++ b/package.json
@@ -79,5 +79,8 @@
 		"**/*.{js,jsx,md,mdx,json}": [
 			"yarn lint"
 		]
+	},
+	"publishConfig": {
+		"@epicdesignlabs:registry": "https://registry.npmjs.org"
 	}
 }
