--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
 	"parserOptions": {
 		"ecmaFeatures": {},
 		"ecmaVersion": "latest",
-		"sourceType": "module"
+		"sourceType": "module",
+		"requireConfigFile": false
 	}
 }
