--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
 	"description": "A revised node module for authentication and use with the BigCommerce API. Currently in active development.",
 	"scripts": {
 		"autotest": "supervisor -q -n exit -x node_modules/.bin/_mocha --",
-		"build": "babel src --out-dir ./ --source-maps",
+		"build": "babel ./src/ --out-dir ./ --source-maps",
 		"exectests": "nyc ./node_modules/.bin/_mocha",
 		"watch": "babel src --out-dir ./ --source-maps --watch",
-		"lint:eslint": "yarn eslint '**/*.{js,jsx,ts,tsx}' --quiet --fix --color --ignore-path .gitignore",
-		"lint:prettier": "yarn prettier '**/*.{js,jsx,ts,tsx}' --write --ignore-path .gitignore",
+		"lint:eslint": "yarn eslint '**/*.js' --quiet --fix --color --ignore-path .gitignore",
+		"lint:prettier": "yarn prettier '**/*.js' --write --ignore-path .gitignore",
 		"lint": "yarn lint:eslint && yarn lint:prettier",
-		"prepare": "husky install",
-		"test": "npm run exectests && npm run lint"
+		"prepare": "yarn husky install",
+		"test": "yarn exectests && npm lint",
+		"release": "dotenv release-it -VV --"
 	},
-	"homepage": "https://github.com/Epic-Design-Labs/node-bigcommerce",
+	"homepage": "https://github.com/Epic-Design-Labs/node-bigcommerce/blob/master/README.md",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/Epic-Design-Labs/node-bigcommerce.git"
@@ -51,17 +52,26 @@
 		"debug": "^4.3.4"
 	},
 	"devDependencies": {
+		"@babel/cli": "^7.16.8",
+		"@babel/core": "^7.16.12",
+		"@babel/eslint-parser": "^7.16.5",
+		"@release-it/keep-a-changelog": "^2.5.0",
 		"agentkeepalive": "^4.2.1",
 		"chai": "^4.3.6",
 		"commitizen": "^4.2.4",
 		"cz-conventional-changelog": "^3.3.0",
+		"dotenv-cli": "^5.1.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-plugin-babel": "^5.3.1",
+		"eslint-plugin-prettier": "^4.0.0",
 		"eslint": "^8.12.0",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.3.7",
 		"mocha": "^9.2.2",
 		"nock": "^13.2.4",
 		"nyc": "^15.1.0",
-		"prettier": "^2.6.1",
+		"prettier": "^2.6.2",
+		"release-it": "^14.14.2",
 		"sinon": "^13.0.1",
 		"supervisor": "^0.12.0"
 	},
@@ -70,7 +80,7 @@
 	},
 	"directories": {
 		"lib": "lib",
-		"test": "test"
+		"tests": "tests"
 	},
 	"config": {
 		"commitizen": {
@@ -85,8 +95,34 @@
 		}
 	},
 	"lint-staged": {
-		"**/*.{js,jsx}": [
+		"**/*.js": [
 			"yarn lint"
 		]
+	},
+	"release-it": {
+		"git": {
+			"commitMessage": "chore(release): ${release.version} [skip ci]\n\n${release.notes}",
+			"requireCleanWorkingDir": true,
+			"tagAnnotation": "Release v${version}",
+			"tagName": "v${version}"
+		},
+		"github": {
+			"draft": true,
+			"release": true,
+			"releaseName": "v${version}"
+		},
+		"npm": {
+			"publish": true
+		},
+		"plugins": {
+			"@release-it/keep-a-changelog": {
+				"filename": "CHANGELOG.md"
+			}
+		},
+		"hooks": {
+			"after:git:release": "if [ \"${isPreRelease}\" != \"true\" ]; then git tag -f latest && git push -f origin latest; fi",
+			"after:release": "echo Successfully created a release draft v${version} for ${repo.repository}. Please add release notes when necessary and publish it!",
+			"before:init": "npm test"
+		}
 	}
 }
