--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
 	"version": "1.0.1",
 	"description": "A revised node module for authentication and use with the BigCommerce API. Currently in active development.",
 	"scripts": {
-		"autotest": "supervisor -q -n exit -x node_modules/.bin/_mocha --",
-		"build": "babel ./src/ --out-dir ./ --source-maps",
-		"exectests": "nyc ./node_modules/.bin/_mocha",
-		"watch": "babel src --out-dir ./ --source-maps --watch",
+		"autotest": "yarn supervisor -q -n exit -x node_modules/.bin/_mocha --",
+		"exectests": "yarn nyc ./node_modules/.bin/_mocha",
 		"lint:eslint": "yarn eslint '**/*.js' --quiet --fix --color --ignore-path .gitignore",
 		"lint:prettier": "yarn prettier '**/*.js' --write --ignore-path .gitignore",
 		"lint": "yarn lint:eslint && yarn lint:prettier",
@@ -43,13 +41,17 @@
 			"url": "https://guyromellemagayano.dev"
 		},
 		{
-			"name": "Rick Craig"
+			"name": "Rick Craig",
+			"email": "rick@conversio.com",
+			"url": "https://conversio.com"
 		}
 	],
 	"license": "MIT",
 	"main": "./lib/bigcommerce",
 	"dependencies": {
-		"debug": "^4.3.4"
+		"debug": "^3.1.0",
+		"is-ip": "^3.1.0",
+		"jsonwebtoken": "^8.5.1"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.16.8",
@@ -61,10 +63,10 @@
 		"commitizen": "^4.2.4",
 		"cz-conventional-changelog": "^3.3.0",
 		"dotenv-cli": "^5.1.0",
+		"eslint": "^8.12.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-babel": "^5.3.1",
 		"eslint-plugin-prettier": "^4.0.0",
-		"eslint": "^8.12.0",
 		"husky": "^7.0.4",
 		"lint-staged": "^12.3.7",
 		"mocha": "^9.2.2",
