--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
 		"lint": "yarn lint:eslint && yarn lint:prettier",
 		"prepare": "yarn husky install",
 		"test": "yarn exectests && yarn lint",
-		"release": "dotenv release-it -VV --"
+		"release": "dotenv release-it -VV --",
+		"release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version major && git push origin && git push origin --tags",
+		"release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version minor && git push origin && git push origin --tags",
+		"release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version patch && git push origin && git push origin --tags"
 	},
 	"homepage": "https://github.com/Epic-Design-Labs/node-bigcommerce/blob/master/README.md",
 	"repository": {
@@ -62,6 +65,7 @@
 		"eslint": "^8.12.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-prettier": "^4.0.0",
+		"generate-changelog": "^1.8.0",
 		"husky": "^8.0.1",
 		"lint-staged": "^12.3.7",
 		"mocha": "^10.0.0",
@@ -95,31 +99,5 @@
 		"**/*.js": [
 			"yarn lint"
 		]
-	},
-	"release-it": {
-		"git": {
-			"commitMessage": "chore(release): ${release.version} [skip ci]\n\n${release.notes}",
-			"requireCleanWorkingDir": true,
-			"tagAnnotation": "Release v${version}",
-			"tagName": "v${version}"
-		},
-		"github": {
-			"draft": true,
-			"release": true,
-			"releaseName": "v${version}"
-		},
-		"npm": {
-			"publish": true
-		},
-		"plugins": {
-			"@release-it/keep-a-changelog": {
-				"filename": "CHANGELOG.md"
-			}
-		},
-		"hooks": {
-			"after:git:release": "if [ \"${isPreRelease}\" != \"true\" ]; then git tag -f latest && git push -f origin latest; fi",
-			"after:release": "echo Successfully created a release draft v${version} for ${repo.repository}. Please add release notes when necessary and publish it!",
-			"before:init": "yarn test"
-		}
 	}
 }
